# pychemelt_analyses

./: README.md  pyproject.toml
data/: 20191202_ACBP_15C_95C_processed.xlsx
notebooks/: 01_exp_sq_fit_analysis.ipynb  0_plot_dsf_data.ipynb  1_exp_quad_fit_analysis.ipynb  1_exp_sq_fit_analysis.ipynb  2_evaluate_Tm_fitting_simulated_data.ipynb  3_analyse_Cp_DH_effect_on_DG.ipynb  5_evaluate_fittings_on_experimental_data.ipynb  scripts.py
